# img2bez

./: .gitignore  Cargo.toml  README.md  test.sh
.claude/: settings.json
.github/workflows/: ci.yml
autoresearch/: program.md  render_glyph.py  run_experiment.sh  setup.sh  viz_glyphs.py  viz_glyphs.rs
context/: eval-loop.md  img2bez-architecture.md  img2bez-pipeline.md  potrace-algorithm-details.md  tracing-algorithms-research.md
docs/: autotracing-research.md  input-adaptation.md  known-problems.md
eval-harness/: CORPUS.md  build_corpus.py  check_structural_gate.py  compare_structural_runs.py  degrade.py  ensure_venv.sh  focused_glyphs.txt  inspect_glyph.sh  render-specimen.sh  render_glyph.py  render_specimen.py  requirements.txt  run_experiment.sh  run_structural_gate.sh  run_structural_loop.sh  run_trace_stress_gate.sh  score_wild.py  score_wild.sh  setup.sh  structural-loop.md  structural_report.py  trace_stress_gate.py  tracelog.py  viz_glyphs.rs
eval-harness/baselines/: current.tsv
eval-harness/render-glyph/: Cargo.toml
eval-harness/render-glyph/src/: main.rs
eval-harness/structure-compare/: Cargo.toml  build.rs
eval-harness/structure-compare/src/: main.rs
mcp/: Cargo.toml  README.md
mcp/src/: main.rs
src/: bitmap.rs  config.rs  contour.rs  corners.rs  error.rs  eval.rs  fit.rs  geom.rs  lib.rs  main.rs  metrics.rs  postprocess.rs  refit.rs  render.rs  simplify.rs  trace.rs  ufo.rs
src/cleanup/: chamfer.rs  direction.rs  extrema.rs  harmonize.rs  mod.rs  simplify.rs  snap.rs
src/font/: compat.rs  masters.rs  masters_flow.rs  mod.rs  refit.rs
src/io/: bitmap.rs  eval.rs  glif.rs  mod.rs  render.rs  ufo.rs
src/ml/: image_stats.rs  judge.rs  mldata.rs  mod.rs
src/ml/heads/: corner_v1.rs  mod.rs  site_v1.rs
src/model/: config.rs  error.rs  geom.rs  glyph.rs  mod.rs  outline.rs  trace_mode.rs
src/output/: mod.rs  ufo.rs
src/pipeline/: mod.rs  placement.rs  preprocess.rs
src/pipeline/cleanup/: chamfer.rs  direction.rs  even.rs  inflection.rs  mod.rs  simplify.rs  snap.rs  straighten.rs
src/pipeline/vectorize/: joint.rs  mod.rs  subpixel.rs
src/pipeline/vectorize/fit/: corners.rs  fallback.rs  finish.rs  mod.rs  plan.rs  runs.rs  sections.rs
src/pipeline/vectorize/refine/: flats.rs  lines.rs  merge.rs  mod.rs  polish.rs  verify.rs  welds.rs
src/vectorize/: curve.rs  decompose.rs  mod.rs  polygon.rs
test.ufo/: fontinfo.plist  lib.plist
test.ufo/glyphs/: B_.glif  H_.glif  a.glif  contents.plist
tests/: glyph_json.rs  masters.rs  placement.rs
tests/data/: corner_v1_parity.json  site_v1_parity.json
wasm/: Cargo.toml  README.md  deploy-demo.sh
wasm/src/: lib.rs
