[package]
name = "img2bez"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Eli Heuer <elih@protonmail.com>"]
description = "Trace bitmap glyph images to bezier contours and insert them directly into UFO font sources"
repository = "https://github.com/eliheuer/img2bez"
license = "MIT"

[[bin]]
name = "img2bez"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
image = "0.25"
imageproc = "0.25"
kurbo = "0.13"
rayon = "1.10"
thiserror = "2"
tiny-skia = "0.11"
png = "0.17"

# Optional: output backends
norad = { version = "0.18", features = ["kurbo"], optional = true }

# Optional: CLI
clap = { version = "4", features = ["derive"], optional = true }

[features]
default = ["ufo", "cli"]
ufo = ["dep:norad"]
cli = ["dep:clap", "ufo"]
